Fix again code whitespace as it interacted with code inside pre

--- a/styles/madoko.css
+++ b/styles/madoko.css
@@ -187,7 +187,7 @@ a.localref:hover {
   display: none;
 }
 
-.madoko code, .madoko .code {
+.madoko code.code, .madoko span.code {
   white-space: pre-wrap;
 }
 
